src/main/webapp/imcms/css/admin/imcms-super-admin.css
/* ... */
.imcms-search-row__users-activity-filter label {
    margin: 0;
}

.imcms-search-row__users-activity-filter {
    margin-top: 38px!important;
    margin-bottom: auto!important;
}

.imcms-form__field .imcms-user-title-row.imcms-title {
    margin-bottom: 0;
}

.imcms-user-info-row,
.imcms-user-title-row {
    padding: 2px;
    border-bottom: solid 1px #dad5d5;
}

.imcms-user-info-row__user-id,
.imcms-user-info-row__last-name,
.imcms-user-info-row__first-name,
.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-id,
.imcms-user-title-row__last-name,
.imcms-user-title-row__first-name,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    padding: 5px;
}

.imcms-user-info-row__user-name{
    text-overflow:ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.imcms-user-info-row .imcms-control {
    margin: 5px;
}

.imcms-user-info-row__user-id,
.imcms-user-title-row__user-id {
    width: 5%;
}

.imcms-user-info-row__first-name,
.imcms-user-title-row__first-name {
    width: 13%;
}

.imcms-user-info-row__last-name,
.imcms-user-title-row__last-name {
    width: 18%;
}

.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    width: 27%;
}

.imcms-user-info-row > *,
.imcms-user-title-row > * {
    display: inline-block;
}

.imcms-user-info-row__archive {
    background-size: contain;
    width: 21px;
    height: 21px;
    font-size: 14px;
}

.imcms-users-search-result {
    height: 600px;
    overflow-y: auto;
    background-color: #ececec;
    border: solid 1px #d1d2c6;
}

.imcms-pop-up-modal__left-side {
    max-width: none;
    width: 20%;
}

.imcms-user-info-row--archived {
    background-color: lightgray;
}

.imcms-drop-down-list__item .imcms-label {
    margin-bottom: 0;
}

.roles-table {
    width: 40%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-block;
}

.roles-table__role-row {
    padding: 5px;
    cursor: pointer;
}

.roles-table__role-row:hover {
    background-color: #dfedff;
}

.roles-table__role-row.roles-table__role-row--active {
    background-color: #c3d9f5;
}

.roles-editor {
    width: 50%;
    margin-left: 2%;
    vertical-align: top;
}

.versions-container {
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-flex;
    width: 80%;
}

.data-versions__imcms-version,
.data-versions__java-version,
.data-versions__server-info,
.data-versions__db-version,
.data-versions__db-name-version {
    margin: 10px;
    font-size: 18px;
}

.files-table {
    width: 100%;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-flex;
    justify-content: space-between;
}

.files-table * {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.templates-table {
    width: 100%;
    display: inline-flex;
    height: 400px;
}

.files-table > *,
.templates-table > * {
    width: 50%;
}

.group-editor > *:not(.group-editor__create-button) {
    width: 98%;
}

.group-editor__create-button {
    margin-bottom: 10px;
}

.group-editor .imcms-select__drop-down-list,
.group-editor .imcms-text-box__input {
    width: 100%;
}

.templates-data,
.documents-data {
    overflow-y: auto;
    border: 1px solid gainsboro;
}

.templates-data {
    height: 140px;
}

.documents-data {
    height: 400px;
}

.doc-info-row,
.template-info-row {
    display: flex;
    padding: 5px;
    cursor: pointer;
}

.title-doc-row {
    display: flex;
    font-weight: 600;
    margin-bottom: 10px;
    padding: 5px;
}

.group-editor__templates-data-title {
    margin: 10px 0;
}

.table-documents__loading-animation {
    margin: 0 50%;
}

.templates-radios-container {
    padding: 5px 10px;
}

.text-preview {
    padding: 0;
}

.text-preview textarea {
    width: 100%;
    height: 100%;
}

.first-sub-files,
.second-sub-files {
    height: 200px;
    overflow-y: auto;
    border: 1px solid gainsboro;
    justify-content: space-between;
}

.first-sub-files,
.second-sub-files {
    background-color: #dcdada;
}

.file-row,
.directory-row,
.root-directory-row,
.path-row {
    padding: 5px;
    cursor: pointer;
    display: flex;
}

.path-row {
    background-color: #ffffe0;
}

.files-table__directory-row--selected,
.files-table__root-directory-row--selected {
    background-color: #FFCC99;
}

.file-row:hover,
.directory-row:hover,
.doc-info-row:hover,
.root-directory-row:hover,
.template-info-row:hover {
    background-color: #dfedff;
}

.doc-info-row__document-id,
.doc-info-row__document-type,
.title-doc-row__doc-id,
.title-doc-row__doc-type {
    width: 50%;
}

.root-directory-row__delete {
    margin-right: 1%;
}

.file-row *,
.root-directory-row *,
.directory-row * {
    width: 6%;
}

.directory-row__file-name,
.file-row__file-name,
.template-info-row__template-name,
.root-directory-row__file-name {
    width: auto;
    margin-right: auto;
    word-break: break-all;
}

.file-row__file-size {
    width: auto;
    margin-right: 10px;
}

.files-table__file-row--selected,
.files-table__file-row--selected {
    background-color: #59a5e1;
}

.file-row.files-table__file-row--active {
    background-color: #00a607;
}

.buttons-action {
    display: inline-flex;
    width: 100%;
}

.buttons-move,
.buttons-copy {
    display: inline-flex;
    justify-content: center;
    width: 100%;
    padding-bottom: 3%;
}

.title-move,
.title-copy {
    width: 100%;
    text-align: center;
    font-weight: bold;
}

.buttons-action__first-action {
    width: 50%;
}

.buttons-action__second-action {
    width: 50%;
    direction: rtl;
}

.buttons-copy > *,
.buttons-move > *,
.buttons-action__second-action > *,
.buttons-action__first-action > * {
    width: 25px;
}

.second-files-action,
.first-files-action {
    display: flex;
}
/* ... */

